Bug 820559: Workaround old Android gcc build-bustage by casting anonymous enum template args to ints, r=ekr